# KidsUniversity

./: CMakeLists.txt  CMakeLists.txt.autosave  README.md  main.cpp  solvers.cpp  solvers.h
ConfigFiles/Config0/: helperConfig.txt  parcoursConfig.txt
ConfigFiles/Config1/: helperConfig.txt  parcoursConfig.txt
ConfigFiles/Config2/: helperConfig.txt  parcoursConfig.txt
ConfigFiles/Config3/: helperConfig.txt  parcoursConfig.txt
src/: automthread.cpp  automthread.h  baseObj2Draw.h  controller.cpp  controller.h  glwidget.cpp  glwidget.h  graph.cpp  graph.h  helper.cpp  helper.h  parcours.cpp  parcours.h  robot.cpp  robot.h  solvers.cpp  solvers.h  stringException.cpp  stringException.h  window.cpp  window.h
support/: Robocoop.docx
